# ck3save

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  release.toml
.github/workflows/: rust.yml
benches/: ck3save_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_extract.rs  fuzz_melt.rs
src/: ck3date.rs  deflate.rs  errors.rs  extraction.rs  file.rs  flavor.rs  header.rs  lib.rs  maybe_object.rs  melt.rs  models.rs  tokens.rs  util.rs
src/models/: gamestate.rs  header.rs  mod.rs
tests/: ironman.rs  samples.rs  utils.rs
tests/fixtures/: header.melted  header.txt
