[package]
name = "ck3save"
version = "0.4.3"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
edition = "2021"
exclude = ["/assets/*", "/fuzz/*"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rakaly/ck3save.git"
description = "Ergonomically work with all CK3 saves (regular and ironman)"
keywords = ["ck3", "ironman"]
categories = ["parsing"]

[features]
serialize = []

[dependencies]
jomini =  { version = "0.28.0", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "2.0.0"
flate2 = { version = "1.1.0", default-features = false, features = ["zlib-rs"] }
rawzip = "0.2.0"

[dev-dependencies]
attohttpc = "0.26"
memchr = "2.7"

# We override the test profile so that our tests run in a tolerable time as
# some of the asset files are heavyweight and can take a significant amount of
# time. Here is some timing data recorded to run one test:
#
# cargo test                 0m15.037s
# cargo test (opt-level=3)   0m9.644s
# cargo test (+lto=thin)     0m0.907s
# cargo test --release       0m0.620s
[profile.test]
opt-level = 3
lto = "thin"

[profile.bench]
lto = true
codegen-units = 1

[profile.release]
lto = true
codegen-units = 1
